Remove large binary files from git tracking to speed up commits
- Updated .gitignore to ignore output PNG/CSV files and build artifacts
- Removed output/*.png and output/*.csv from git tracking (kept locally)
- Removed build/**/*.pyd and build artifacts from tracking
- Fixed Cython module import path to use build directory
- Removed verbose logging from bootstrap data loading

This will make commits much faster since we're no longer tracking
large binary files that change frequently.

--- a/.gitignore
+++ b/.gitignore
@@ -39,9 +39,17 @@ env/
 # data/*.csv
 # data/*.xlsx
 
-# Output files (uncomment if you want to ignore outputs)
-# output/*.png
-# output/*.pdf
+# Output files - these are generated and shouldn't be committed
+output/*.png
+output/*.pdf
+output/*.csv
+
+# Build artifacts (compiled Cython modules)
+build/**/*.pyd
+build/**/*.exp
+build/**/*.lib
+build/**/*.obj
+build/temp.*/
 
 # OS
 .DS_Store
